include/dss_capi.h

    /*! 
    {True | False*} Denotes whether to trace the control actions to a file.
    */
    DSS_CAPI_DLL void Settings_Set_ControlTrace(uint16_t Value);
    /*! 
    Array of doubles defining the legal voltage bases in kV L-L
    */
    DSS_CAPI_DLL void Settings_Set_VoltageBases(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Name of LoadShape object that serves as the source of price signal data for yearly simulations, etc.
    */
    DSS_CAPI_DLL const char* Settings_Get_PriceCurve(void);
    /*! 
    Price Signal for the Circuit
    */
    DSS_CAPI_DLL double Settings_Get_PriceSignal(void);
    /*! 
    Name of LoadShape object that serves as the source of price signal data for yearly simulations, etc.
    */
    DSS_CAPI_DLL void Settings_Set_PriceCurve(const char* Value);
    /*! 
    Price Signal for the Circuit
    */
    DSS_CAPI_DLL void Settings_Set_PriceSignal(double Value);
    /*! 
    Controls whether the terminals are checked when updating the currents in Load component. Defaults to True.
    If the loads are guaranteed to have their terminals closed throughout the simulation, this can be set to False to save some time.
    
    (API Extension)
    */
    DSS_CAPI_DLL uint16_t Settings_Get_LoadsTerminalCheck(void);
    DSS_CAPI_DLL void Settings_Set_LoadsTerminalCheck(uint16_t Value);
    /*! 
    Controls whether `First`/`Next` iteration includes or skips disabled circuit elements.
    The default behavior from OpenDSS is to skip those. The user can still activate the element by name or index.
    
    The default value for IterateDisabled is 0, keeping the original behavior.
    Set it to 1 (or `True`) to include disabled elements.
    Other numeric values are reserved for other potential behaviors.
    
    (API Extension)
    */
    DSS_CAPI_DLL int32_t Settings_Get_IterateDisabled(void);
    DSS_CAPI_DLL void Settings_Set_IterateDisabled(int32_t Value);