src/v7/CAPI_Settings.pas


//------------------------------------------------------------------------------
procedure Settings_Set_ControlTrace(Value: Wordbool); CDECL;
begin
    if InvalidCircuit then
        Exit;
    ActiveCircuit.ControlQueue.TraceLog := Value;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_VoltageBases(ValuePtr: PDouble; ValueCount: Integer); CDECL;
begin
    if InvalidCircuit then
        Exit;
        
    {LegalVoltageBases is a zero-terminated array, so we have to allocate
     one more than the number of actual values}
    with ActiveCircuit do
    begin
        Reallocmem(LegalVoltageBases, SizeOf(Double) * (ValueCount + 1));
        Move(ValuePtr^, LegalVoltageBases[1], ValueCount * SizeOf(Double));
        LegalVoltageBases^[ValueCount + 1] := 0.0;
    end;
end;
//------------------------------------------------------------------------------
function Settings_Get_PriceCurve(): PAnsiChar; CDECL;
begin
    Result := NIL;
    if InvalidCircuit then
        Exit;
    Result := DSS_GetAsPAnsiChar(ActiveCircuit.PriceCurve)
end;
//------------------------------------------------------------------------------
function Settings_Get_PriceSignal(): Double; CDECL;
begin
    Result := 0.0;
    if InvalidCircuit then
        Exit;
    Result := ActiveCircuit.Pricesignal
end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceCurve(const Value: PAnsiChar); CDECL;
begin
    if InvalidCircuit then
        Exit;
    with ActiveCircuit do
    begin
        PriceCurve := Value;
        PriceCurveObj := LoadShapeClass.Find(Pricecurve);
        if PriceCurveObj = NIL then
            DoSimpleMsg('Price Curve: "' + Pricecurve + '" not found.', 5006);
    end;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_PriceSignal(Value: Double); CDECL;
begin
    if InvalidCircuit then
        Exit;
    ActiveCircuit.PriceSignal := Value;
end;
//------------------------------------------------------------------------------
function Settings_Get_LoadsTerminalCheck(): Wordbool; CDECL;
begin
    Result := DSS_CAPI_LOADS_TERMINAL_CHECK;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_LoadsTerminalCheck(Value: Wordbool); CDECL;
begin
    DSS_CAPI_LOADS_TERMINAL_CHECK := Value;
end;
//------------------------------------------------------------------------------
procedure Settings_Set_IterateDisabled(Value: Integer); CDECL;
begin
    DSS_CAPI_ITERATE_DISABLED := Value;
end;
//------------------------------------------------------------------------------
function Settings_Get_IterateDisabled(): Integer; CDECL;
begin
    Result := DSS_CAPI_ITERATE_DISABLED;
end;
//------------------------------------------------------------------------------
end.
